# 2bpintegrity

./: .gitignore  CMakeLists.txt  README.md  hydra.yml  package-lock.json  package.json
actions/: makeagreemnt.js  setbpjson.js  signagreemnt.js  testrm.js
include/: bpintegrity.hpp
ricardian/: bpintegrity.contracts.md
src/: CMakeLists.txt  bpintegrity.cpp
telos/: telos.system.abi  telos.system.wasm
tests/: bp.json  bpintegrity.test.js  telos.system.test.js
tests/fixtures/eosio.system/: producers.json
